tests/src/snapshots/fe_compiler_tests__analysis__case_099_while_loop_with_continue.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/while_loop_with_continue.fe:3:19
  │
3 │         i: u256 = 0
  │                   ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:4:25
  │
4 │         counter: u256 = 0
  │                         ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:6:15
  │
6 │         while i < 2:
  │               ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:6:19
  │
6 │         while i < 2:
  │                   ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:6:15
  │
6 │         while i < 2:
  │               ^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:7:13
  │
7 │             i = i + 1
  │             ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:7:17
  │
7 │             i = i + 1
  │                 ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:7:21
  │
7 │             i = i + 1
  │                     ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:7:17
  │
7 │             i = i + 1
  │                 ^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:8:16
  │
8 │             if i == 1:
  │                ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:8:21
  │
8 │             if i == 1:
  │                     ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_continue.fe:8:16
  │
8 │             if i == 1:
  │                ^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/while_loop_with_continue.fe:10:13
   │
10 │             counter = counter + 1
   │             ^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/while_loop_with_continue.fe:10:23
   │
10 │             counter = counter + 1
   │                       ^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/while_loop_with_continue.fe:10:33
   │
10 │             counter = counter + 1
   │                                 ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/while_loop_with_continue.fe:10:23
   │
10 │             counter = counter + 1
   │                       ^^^^^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/while_loop_with_continue.fe:11:16
   │
11 │         return counter
   │                ^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/while_loop_with_continue.fe:2:5
   │  
 2 │ ╭     pub def bar() -> u256:
 3 │ │         i: u256 = 0
 4 │ │         counter: u256 = 0
 5 │ │ 
   · │
10 │ │             counter = counter + 1
11 │ │         return counter
   │ ╰──────────────────────^ attributes hash: 2041944711719443549
   │  
   = FunctionAttributes {
         is_public: true,
         name: "bar",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
  ┌─ features/while_loop_with_continue.fe:3:9
  │
3 │         i: u256 = 0
  │         ^^^^^^^^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop_with_continue.fe:4:9
  │
4 │         counter: u256 = 0
  │         ^^^^^^^^^^^^^^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
   ┌─ features/while_loop_with_continue.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │     pub def bar() -> u256:
 3 │ │         i: u256 = 0
 4 │ │         counter: u256 = 0
   · │
10 │ │             counter = counter + 1
11 │ │         return counter
   │ ╰──────────────────────^ attributes hash: 16417315723405128961
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "bar",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
         ],
         init_function: None,
         events: [],
         structs: [],
         external_contracts: [],
     }

note: 
  ┌─ features/while_loop_with_continue.fe:2:22
  │
2 │     pub def bar() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop_with_continue.fe:3:12
  │
3 │         i: u256 = 0
  │            ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop_with_continue.fe:4:18
  │
4 │         counter: u256 = 0
  │                  ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


